@@ -56,6 +56,7 @@ public:
 	int link_count;
 	bool need_auth;
 	std::string password;
+	double slowlog_timeout; // in ms, but in config file, it's in seconds
 
 	~NetworkServer();
 	
