@@ -18,6 +18,8 @@ server:
 	# auth password must be at least 32 characters
 	#auth: very-strong-password
 	#readonly: yes
+	# in ms, to log slowlog with WARN level
+	#slowlog_timeout: 5
 
 replication:
 	binlog: yes
